# Chat_App_Microservice

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  main_old.rs
src/: main.rs  schema.rs
