[package]
name = "microservice_rs"
version = "0.1.0"
authors = ["marcobtoito <marcobtoito@gmail.com>"]

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.5.2"
serde = "1.0"
serde_json = "1.0.9"
serde_derive = "1.0.27"
diesel = { version = "1.1.0", features = ["postgres"] }
maud = "0.24"
